Replace collectors.toList()